# rust-demo-rpath

./: .gitignore  Cargo.toml
rpath-demo/: Cargo.toml
rpath-demo/src/: main.rs
rpath-meson/: build.ninja  meson.build  rpath_meson.c  rpath_meson.h  rpath_meson.pc
rpath-sys/: Cargo.toml  build.rs
rpath-sys/src/: lib.rs
